Update importance_of_phase.ipynb - title

--- a/notebooks/importance_of_phase.ipynb
+++ b/notebooks/importance_of_phase.ipynb
@@ -5,7 +5,7 @@
    "id": "994671e0-949c-401b-b1e1-fd08f1217bf3",
    "metadata": {},
    "source": [
-    "# The Importance of Phase\n",
+    "# The Importance of Phase in Image\n",
     "\n",
     "\n",
     "### Taufiq Widjanarko\n",
